--- a/BGE/BGE.vcxproj.filters
+++ b/BGE/BGE.vcxproj.filters
@@ -212,6 +212,9 @@
     <ClCompile Include="LeapListener.cpp">
       <Filter>Assignment</Filter>
     </ClCompile>
+    <ClCompile Include="PhysicsHand.cpp">
+      <Filter>Assignment</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -383,6 +386,9 @@
       <Filter>Assignment</Filter>
     </ClInclude>
     <ClInclude Include="LeapListener.h">
+      <Filter>Assignment</Filter>
+    </ClInclude>
+    <ClInclude Include="PhysicsHand.h">
       <Filter>Assignment</Filter>
     </ClInclude>
   </ItemGroup>
