--- a/BGE/BGE.vcxproj
+++ b/BGE/BGE.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="Buddha.cpp" />
     <ClCompile Include="FlockingScenario.cpp" />
     <ClCompile Include="FountainEffect.cpp" />
+    <ClCompile Include="Hand.cpp" />
     <ClCompile Include="IdleState.cpp" />
     <ClCompile Include="Lab4.cpp" />
     <ClCompile Include="Lab5.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="Buddha.h" />
     <ClInclude Include="FlockingScenario.h" />
     <ClInclude Include="FountainEffect.h" />
+    <ClInclude Include="Hand.h" />
     <ClInclude Include="IdleState.h" />
     <ClInclude Include="Lab4.h" />
     <ClInclude Include="Lab5.h" />
