--- a/BGE/BGE.vcxproj.filters
+++ b/BGE/BGE.vcxproj.filters
@@ -215,6 +215,9 @@
     <ClCompile Include="Hand.cpp">
       <Filter>Assignment</Filter>
     </ClCompile>
+    <ClCompile Include="KinematicController.cpp">
+      <Filter>Assignment</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -389,6 +392,9 @@
       <Filter>Assignment</Filter>
     </ClInclude>
     <ClInclude Include="Hand.h">
+      <Filter>Assignment</Filter>
+    </ClInclude>
+    <ClInclude Include="KinematicController.h">
       <Filter>Assignment</Filter>
     </ClInclude>
   </ItemGroup>
