--- a/BGE/BGE.vcxproj
+++ b/BGE/BGE.vcxproj
@@ -108,6 +108,7 @@ xcopy $(LEAP_SDK)\lib\x86\msvcr100d.dll "$(TargetDir)"</Command>
     <ClCompile Include="Lab8.cpp" />
     <ClCompile Include="LazerBeam.cpp" />
     <ClCompile Include="LeapListener.cpp" />
+    <ClCompile Include="LineHand.cpp" />
     <ClCompile Include="ObstacleAvoidanceScenario.cpp" />
     <ClCompile Include="Particle.cpp" />
     <ClCompile Include="ParticleEffect.cpp" />
@@ -168,6 +169,7 @@ xcopy $(LEAP_SDK)\lib\x86\msvcr100d.dll "$(TargetDir)"</Command>
     <ClInclude Include="Lab8.h" />
     <ClInclude Include="LazerBeam.h" />
     <ClInclude Include="LeapListener.h" />
+    <ClInclude Include="LineHand.h" />
     <ClInclude Include="ObstacleAvoidanceScenario.h" />
     <ClInclude Include="Particle.h" />
     <ClInclude Include="ParticleEffect.h" />
