--- a/BGE/BGE.vcxproj.filters
+++ b/BGE/BGE.vcxproj.filters
@@ -227,6 +227,9 @@
     <ClCompile Include="LeapHandGun.cpp">
       <Filter>Assignment</Filter>
     </ClCompile>
+    <ClCompile Include="ivanPatri.cpp">
+      <Filter>Assignment</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h">
@@ -413,6 +416,9 @@
       <Filter>Assignment</Filter>
     </ClInclude>
     <ClInclude Include="LeapHandGun.h">
+      <Filter>Assignment</Filter>
+    </ClInclude>
+    <ClInclude Include="ivanPatri.h">
       <Filter>Assignment</Filter>
     </ClInclude>
   </ItemGroup>
